# cobs_codec_rs

./: .dod.yml  .tbdflow.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATIONS.md  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  publish-crate.yml  release.yml
benches/: throughput.rs
docs/: katex-header.html
examples/: protobuf_cobs.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_total.rs  roundtrip.rs  sentinel.rs
src/: cobs.rs  cobsr.rs  error.rs  framing.rs  lib.rs
tests/: conformance.rs  derives.rs  features.rs  framing.rs  robustness.rs  vectors.rs
