[package]
name = "cobs_codec_rs"
version = "1.1.0"
edition = "2021"
rust-version = "1.81"
description = "Consistent Overhead Byte Stuffing (COBS) and COBS/R codec: no_std, zero-dependency, for zero-free framing of serial and packet byte streams."
authors = ["Alexander Salas Bastidas <ajsb85@firechip.dev>"]
license = "MIT"
repository = "https://github.com/firechip/cobs_codec_rs"
homepage = "https://firechip.dev"
documentation = "https://docs.rs/cobs_codec_rs"
readme = "README.md"
keywords = ["cobs", "serial", "framing", "no-std", "embedded"]
categories = ["encoding", "embedded", "no-std"]

[features]
default = ["std"]
# Enables the `*_to_vec` convenience functions and framing that allocate.
alloc = []
# Enables `std` (implies `alloc`). Reserved for future std-only conveniences.
std = ["alloc"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
